<resources>
    <string name="app_name">PicApp</string>
    <string name="login_title">Logueate a tu Cuenta</string>
    <string name="register_text">Registrate para ver fotos y videos de tus amigos.</string>
    <string name="register_title">Abrí una Cuenta</string>
    <string name="login_text">Logueate para ver fotos y videos de tus amigos.</string>
    <string name="login_button">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="nueva_cuenta_button">Crear una Cuenta</string>
    <string name="nueva_cuenta_text">¿No tenés una cuenta?</string>
    <string name="email_text">Email</string>
    <string name="action_search_text">Search</string>
    <string name="action_account_settings">Editar Cuenta</string>
    <string name="action_logout_text">Logout</string>
    <string name="resgister_button">Registrate</string>
    <string name="cuenta_vieja_text">¿Ya tenés una cuenta?</string>
    <string name="vieja_cuenta_button">Entrar con tu Cuenta</string>
    <string name="password2_text">Confirm Password</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_flashes">Flashes</string>
    <string name="nav_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_text">Entrá con tu cuenta de google</string>
    <string name="user_login_text">O con tu usuario y contraseña</string>
    <string name="volver">volver</string>
    <string name="nombre">Nombre:</string>
    <string name="aceptar">aceptar</string>
    <string name="agregarDescripcion">Agregue una descripción...</string>
    <string name="agregarTitulo">Agregue un titulo...</string>
    <string name="privacidad">¿Quién debería ver esto?</string>

    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
</resources>
